# reveal

./: LICENSE-MIT  README.md  biome.json
.github/workflows/: publish.yml
src/: index.html  main.js  settings.js  styles.css  utils.js
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/bindings/: CoveringType.ts  RevealObject.ts  RevealSettings.ts  UncoveringStrategy.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  image_loading.rs  ios.rs  lib.rs  main.rs  plane_covering.rs  questions.rs  reveal_plugin_android.rs  utils.rs
