[package]
name = "reveal"
version = "0.1.0"
description = "Guess the image."
authors = ["Ulf Rüegg"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reveal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-plugin = { version = "2.0.3", features = ["build"] }

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
delaunator = "1.0.2"
itertools = "0.14.0"
kamadak-exif = "0.6.1"
log = "0.4.25"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
ts-rs = "10.1.0"
url = "2.5.4"
